# codingproblems

./: Cargo.toml
adventofcode17/: LICENSE  README.md  adventofcode.cabal
adventofcode17/app/: Main.hs
adventofcode17/src/Days/: Day1.hs  Day2.hs
adventofcode17/test/Days/: Day1Spec.hs
dailycodingproblem/: README.md  problem_01_pairsum.rs  run-cargo-test
src/: lib.rs  problem_01_pairsum.rs
