name:                adventofcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/R13N/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Rien Maertens
maintainer:          maertensrien@gmail.com
copyright:           Beerware
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Days.Day1 Days.Day2
  build-depends:       base >= 4.7 && < 5,
                       MissingH
  default-language:    Haskell2010

executable adventofcode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Days.Day1Spec
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/R13N/adventofcode
